[package]
name = "src"
version = "0.1.0"
authors = ["Hans Schallmoser <99032404+hansSchall@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo = { version = "0.11.0", features = ["timers"] }
js-sys = "0.3.70"
tokio = { package = "tokio", version = "1.40.0", features = ["sync"] }
tokio_with_wasm = { version = "0.6.1", features = ["full"] }

console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
